force-app/main/default/objects/vlocity_ins__TrailingDocumentPlaceholder__c/vlocity_ins__TrailingDocumentPlaceholder__c.object-meta.xml
<CustomObject>
    <description>Tracks the documents that are needed to make decisions about insurance related processes. For example, an application for life insurance may require one or more medical tests whose results must be submitted before underwriting can proceed. Or underwriting of property insurance may require a property survey, geological survey, soil inspection, or site inspection. Trailing document placeholders can be tracked for quotes, applications, policies, claims or case.</description>
    <label>Trailing Document Placeholder</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Trailing Document Placeholder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailing Document Placeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>