force-app/main/default/objects/vlocity_ins__TrailingDocumentPlaceholder__c/fields/vlocity_ins__InvolvedItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InvolvedItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Involved Property</label>
    <referenceTo>vlocity_ins__InsuranceClaimInvolvedProperty__c</referenceTo>
    <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
    <relationshipName>TrailingDocumentClaimInvolvedProperties</relationshipName>
    <type>Lookup</type>
</CustomField>