force-app/main/default/objects/vlocity_ins__TrailingDocumentPlaceholder__c/fields/vlocity_ins__InvolvedPartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InvolvedPartyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Involved Injury</label>
    <referenceTo>vlocity_ins__InsuranceClaimInvolvedInjury__c</referenceTo>
    <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
    <relationshipName>TrailingDocumentClaimInvolvedInjuries</relationshipName>
    <type>Lookup</type>
</CustomField>